--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="index.css">
     <title>Dice Game</title>
 </head>
 <body>
@@ -48,7 +48,7 @@
                                     0
                                 </h1>
                                 <div class="dice">
-                                    <img src="/image/dice1.PNG"/>
+                                    <img src="dice1.PNG"/>
                                 </div>
                                 <div class="input-group button" id="player-1-button">
                                     <input type="button" value="Roll Dice" onclick="rollDice(1)">
@@ -63,7 +63,7 @@
                                     0
                                 </h1>
                                 <div class="dice">
-                                    <img src="/image/dice1.PNG"/>
+                                    <img src="dice1.PNG"/>
                                 </div>
                                 <div class="input-group button" id="player-2-button">
                                     <input type="button" value="Roll Dice" onclick="rollDice(2)">
@@ -79,7 +79,7 @@
                 
             
         </div>
-        <script src="/javascript/index.js"></script>
+        <script src="index.js"></script>
 
 </body>
 </html>
