Done some changes in index.html

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                             </div>
                         </div>
                         <div class="reset">
-                            <input type="reset" value="Reset" onclick="resetGame()">
+                            <input type="reset" value="Restart Game" onclick="resetGame()">
                         </div>
                     </div>    
                 </div>
